--- a/_posts/2019-12-24-the-us-narrative-today.html
+++ b/_posts/2019-12-24-the-us-narrative-today.html
@@ -649,107 +649,107 @@ stories:
   domain: http://www.globegazette.com/
   link: https://globegazette.com/news/world/russia-s-most-advanced-fighter-jet-crashes-pilot-survives/image_ee0e4099-7d9c-519b-853e-62068a3e0266.html
 images:
-- name: old-granary-field-oldhouse-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-nazi-poster.jpg
-- name: old-granary-field-oldhouse-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-far-away.jpg
-- name: old-school-house-old-schoolhouse-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-hot-spicy.jpg
-- name: meadowbutterfly-meadow-butterfly-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-sunday.jpg
-- name: stories-adam-smith-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-adam-smith-blue-circuit-5.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-brush.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-brush.png
-- name: braceros-domingo-ulloa-seattle-looking-north.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-seattle-looking-north.jpg
-- name: berlinwall2-berlinwall-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-atari-asteroids.jpg
-- name: beach-clouds-lifeguard-beachclouds-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-marcel-duchamp.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-green-zuma.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-green-zuma.JPG
-- name: birdhouse-birdhouse-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-purple-storm.jpg
-- name: store-on-corner-store-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-gan-vogh.jpg
-- name: dc-statue-dcstatue-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-marcel-duchamp.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-feed-people.jpg
-- name: gypsymosaic-gypsy-eyes-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-creativity.jpg
-- name: bordercrossing-bordercrossing-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-pablo-blue.jpg
-- name: oldroad-old-road-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-colorful-blocks.jpg
-- name: la-muse-capital_36728421355_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-capital_36728421355_o.jpg
-- name: machine-road-machine-road-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-gan-vogh.jpg
-- name: udnie-DSC_0033.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0033.jpg
-- name: oldbarn-oldbarn-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-purple-pond.jpg
-- name: san-francisco-street-view-san-francisco-street-view-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-sand-paper.jpg
-- name: old-door-lock-old-door-lock-2-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-horiz-circuit.jpg
-- name: liberty-back-statue-liberty-back-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-dark-dali.jpg
-- name: scream-IMG_8352.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_8352.jpg
-- name: nazi-invasion-statue-liberty-clouds-front-far.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-statue-liberty-clouds-front-far.jpg
-- name: oldhotel-oldhotel-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-green-zuma.jpg
-- name: store-on-corner-oldcabin-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-gred-mash.jpg
-- name: oldcabin-store-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-space-pizza.jpg
-- name: beach-clouds-lifeguard-beachclouds-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-yellow-collage.jpg
-- name: border-crossing-bordercrossing-yellow-paper.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-yellow-paper.png
-- name: capital-battle-capitolbattle-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-colorful-dream.jpg
-- name: bf-skinner-stainless-tree-clouds.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-stainless-tree-clouds.jpg
-- name: bf-skinner-old-comuter-wheels-crypto.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-comuter-wheels-crypto.jpg
-- name: castle-wall-DSC-0067-blue-electricity.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-blue-electricity.JPG
-- name: abe-lincoln-one-ww2-dresden-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-ww2-dresden-file-00-00-00-00.jpg
-- name: fence-fence-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-constitution.jpg
-- name: old-church-oldchurch-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-neo-instinct.jpg
-- name: berlinwall-DSC-0084-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-clean-view.jpg
-- name: abe-lincoln-one-rainbow-festival-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-rainbow-festival-file-00-00-07-91.jpg
-- name: fence-mexico-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-post-modern.jpg
-- name: window-window-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-deep-connections.jpg
-- name: old-gas-pumps-oldgaspumps-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-blue-granite.jpg
-- name: walled-garden-walled-garden-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-post-modern.jpg
-- name: bf-skinner-statue-liberty-clouds-front-far.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-statue-liberty-clouds-front-far.jpg
-- name: border-crossing-bordercrossing-dry-skin.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-dry-skin.png
-- name: capital-battle-capitolbattle-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-internet-numbers.jpg
-- name: old-granary-field-oldhouse-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-crunch-paper.jpg
-- name: paris-paris-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-deep-connections.jpg
-- name: oldhouse-granaryfield-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-ww2-dresden.jpg
-- name: braceros-domingo-ulloa-sunflower-big-green.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-sunflower-big-green.jpg
+- name: hollywood-building-hollywood-building-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-monet-one.jpg
+- name: rockingchair-rockingchair-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-nazi-poster.jpg
+- name: stories-dragon-close-up-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-dragon-close-up-yellow-collage.jpg
+- name: berlinwall-DSC-0084-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-wols.jpg
+- name: stalin-time-hallway-mirrors-hotel.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-hallway-mirrors-hotel.jpg
+- name: birdhouse-birdhouse-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-dark-soul.jpg
+- name: nazi-invasion-statue-staring-down-to-right.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-statue-staring-down-to-right.jpg
+- name: oldhousecars-house-old-cars-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-blue-brush.jpg
+- name: catacombs-catacombs-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-free-woman.jpg
+- name: death-valley-death-valley-national-park-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-blue-granite.jpg
+- name: old-gas-pumps-oldgaspumps-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-internet-numbers.jpg
+- name: nazi-invasion-eagle-spread-tree-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-eagle-spread-tree-2.jpg
+- name: lincoln-memorial-lincolnmemorial-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-crabapple.jpg
+- name: stories-beachclouds-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-beachclouds-clean-view.jpg
+- name: beach-rocks-beach-rocks-currents-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-ww2-color.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-dali-two.jpg
+- name: white-house-whitehouse-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-blue-brush.jpg
+- name: stories-new-machine-road-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-machine-road-blue-circuit-4.jpg
+- name: sand-hand-sand-hand-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-blue-brush.jpg
+- name: containership-bw-storytelling-colored-circuits.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-bw-storytelling-colored-circuits.png
+- name: los-angeles-from-observatory-losangeles-from-observatory-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-purple-pond.jpg
+- name: oldbarn-oldbarn-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-ww2-dresden.jpg
+- name: wind-mills-windmills-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-crunch-paper.jpg
+- name: aws-s3-square-68-161-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-68-161-800-500-0-max-0--5--1.jpg
+- name: locked-up-steam-lock-up-steam-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-purple-pond.jpg
+- name: bf-skinner-abandoned-church-far.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-abandoned-church-far.jpg
+- name: flower-barbed-wire-flower-barbed-wire-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-dark-dali.jpg
+- name: gears-4882162452-fa3126b38d-b-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-cinnamon-rolls.jpg
+- name: nazi-invasion-checkpoint-charlie-mcdonalds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-checkpoint-charlie-mcdonalds.jpg
+- name: rain-princess-blechlety-old-racks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-blechlety-old-racks.jpg
+- name: razorwire-DSC-0080-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-post-modern.jpg
+- name: bf-skinner-screaming-face-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-screaming-face-statue.jpg
+- name: meadowbutterfly-meadow-butterfly-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-far-away.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-plentiful.jpg
+- name: old-church-oldchurch-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-smoking-cigarette.jpg
+- name: bf-skinner-skulls-catacomb-up-close.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-skulls-catacomb-up-close.jpg
+- name: old-door-lock-old-door-lock-2-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-blue-circuit-4.jpg
+- name: subway-subway-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-yellow-paper.jpg
+- name: server-cloud-server-racks-clouds-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-crafty-painting.jpg
+- name: white-house-lawn-white-house-window-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-cinnamon-rolls.jpg
+- name: window-window-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-blue-circuit.jpg
+- name: nazi-invasion-DSC_0048.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0048.jpg
+- name: store-on-corner-store-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-cinnamon-rolls.jpg
+- name: berlinwall2-berlinwall-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-blue-circuit.jpg
+- name: san-francisco-street-view-san-francisco-street-view-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-dali-two.jpg
+- name: razorwire-DSC-0080-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-smoking-cigarette.jpg
+- name: hollywood-building-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-marcel-duchamp.jpg
+- name: stories-downtown-fredericksburg-feed-people.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-downtown-fredericksburg-feed-people.JPG
+- name: copper-circuit-city-clouds-waterfront.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-city-clouds-waterfront.jpg
+- name: eduardo-eduardo-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-alberto-giacometti.jpg
+- name: dc-statue-dcstatue-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-colorful-dream.jpg
 ---
 India's Ruling Party Loses Key State Election Amid Protests.&nbsp;Persons Involved In Sunday Shooting Appear In Court.&nbsp;Katherine Heigl Thanks Husband In Sweet Anniversary Message.&nbsp;Trends On The Gambling Market.&nbsp;China, Japan, South Korea Meet On North Korea, Free Trade.&nbsp;Rocking New Christmas Music.&nbsp;Program Recycles Christmas Lights For Charity.&nbsp;Give The Gift Of Books All Year At Little Free Library.&nbsp;
